--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -34,34 +34,62 @@ a:hover {
 
 /*CSS for login page*/
 #indexBody {
-    background: black;
+    background: linear-gradient(#3400FF, #A200FF) fixed;
 }
 .bodyIntroAnimation {
     /*animation*/
     animation-name: indexBodyChangeColors;
-    animation-duration: 4s;
+    animation-duration: 1.5s;
+    animation-fill-mode: forwards;
 }
 @keyframes indexBodyChangeColors {
     from {background: linear-gradient(#3400FF, #A200FF) fixed;}
     to {background: black;}
 }
 
-#loginThe100 {
+#allLogIn {
+    margin: 0;
+    display: block;
+    text-align: center;
+    /* justify-content: center; */
+    /* position: absolute;
+    left: 50%;
+    top: 50%; */
+}
+
+#firebaseui-auth-container {
+    opacity: 0;
+    transition: opacity 1.5s;
+}
+
+#rosefireButton {
+    opacity: 0;
+    transition: opacity 1.5s;
+    margin: 60px auto;
     color: white;
+    background: #800000;
+    font-size: 1.1em;
+    padding: 10px 30px;
+    border-radius: 5px;
+}
+
+#loginThe100 {
+    color: black;
     font-size: 2.5vw;
     /*Centering "The 100" text*/
-    margin: 0;
+    /* margin: 0;
     position: absolute;
     top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    left: 50%; */
+    /* -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
 }
 .textIntroAnimation {
     /*animation*/
     animation-name: indexThe100ChangeColors;
     animation-duration: 8s;
     animation-delay: 0s;
+    animation-fill-mode: forwards;
 }
 @keyframes indexThe100ChangeColors {
     from {color: black;}
