--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -134,3 +134,32 @@ a:hover {
 .selected {
     color: yellow;
 }
+
+#dataBody{
+    background: black;
+}
+
+#card{
+    background: transparent;
+    color: white;
+    border: 2px solid #A200FF;
+}
+
+#card:hover {
+    background: #A200FF;
+}
+
+#dataSettings ul {
+    list-style-type: none;
+    padding-top: 1em;
+    color: white;
+    padding-left: 0;
+}
+
+#dataSettings ul li{
+    display: inline-block;
+    margin-right: 1em;
+}
+#dataSettings ul li:hover, #dataSettings ul .currentData{
+    background: gray;
+}
